--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ compiler:
 
 before_install:
   # before we build cura we build all dependencies from source. At this point I was unable to find pre-built bins for osx deps, but check back with Ultimaker as they said they were working on this
-  - then brew update && brew install llvm38 && brew install git && brew install openssl && brew link --force --overwrite openssl
+  - brew update && brew install llvm38 && brew install git && brew install openssl && brew link --force --overwrite openssl
   - git clone https://github.com/Ultimaker/cura-build-environment.git $HOME # replace with robo3d
   - cd $HOME/cura-build-environment
   - ./env_osx.sh
@@ -19,7 +19,6 @@ before_install:
   - cd ../
 
 before_script:
-  - brew update
   # if you want to use xcode > v8.0.0
   # - sudo ln -s /Applications/Xcode.app/Contents/Developer/usr/bin/xcodebuild /Applications/Xcode.app/Contents/Developer/usr/bin/xcrun
   - mkdir build
