--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ compiler:
 before_install:
   # before we build cura we build all dependencies from source. At this point I was unable to find pre-built bins for osx deps, but check back with Ultimaker as they said they were working on this
   - brew update && brew install llvm38 && brew install openssl && brew link --force --overwrite openssl
-  - git clone https://github.com/Ultimaker/cura-build-environment.git $HOME # replace with robo3d
+  - git clone https://github.com/Ultimaker/cura-build-environment.git $HOME/cura-build-environment # replace with robo3d version
   - cd $HOME/cura-build-environment
   - ./env_osx.sh
   - mkdir build && cd build
