--- a/.travis.yml
+++ b/.travis.yml
@@ -24,9 +24,7 @@ before_script:
   - cd $HOME/cura-build-environment
   - mkdir build && cd $HOME/cura-build-environment/build
   - cmake .. -DCMAKE_PREFIX_PATH=/opt/cura-build-environment -DCMAKE_BUILD_TYPE=Release -DINCLUDE_DEVEL=ON
-  # don't let travis-ci timeout
-  - while true; do sleep 590 echo "I'm not dead yet" done &
-  - make -j6
+  - travis_wait make -j6
   - cd $HOME
   - mkdir build
   - cmake .. -DCMAKE_INSTALL_PREFIX=/opt/cura-build -DCMAKE_PREFIX_PATH=/opt/cura-build-environment -DCMAKE_BUILD_TYPE=Release
