--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,9 @@
-language: cpp
+language:
+  - cpp
+  - python
+
+python:
+  - '3.5'
 
 sudo: required
 
@@ -20,7 +25,7 @@ before_install:
 before_script:
   # if you want to use xcode > v8.0.0
   # - sudo ln -s /Applications/Xcode.app/Contents/Developer/usr/bin/xcodebuild /Applications/Xcode.app/Contents/Developer/usr/bin/xcrun
-  - git clone https://github.com/Ultimaker/cura-build-environment.git $HOME/cura-build-environment # replace with robo3d version
+  - git clone https://github.com/lbrindze/cura-build-environment.git $HOME/cura-build-environment # replace with robo3d version
   - cd $HOME/cura-build-environment
   - mkdir build && cd $HOME/cura-build-environment/build
   - cmake .. -DCMAKE_PREFIX_PATH=/opt/cura-build-environment -DCMAKE_BUILD_TYPE=Release
